examples/invalid/syntax/4.lua
-- ОШИБКА: незакрытая таблица
local t = {1, 2, 3

-- ОШИБКА: висячая запятая в Lua 5.0
local t = {1, 2, 3,}

-- ОШИБКА: неправильный разделитель
local t = {[1]=1, [2}=2}

-- ОШИБКА: пустое присваивание
t[1] =

-- ОШИБКА: пустой индекс
t[] = 1

-- ОШИБКА: неправильный ключ
local t = {[for] = 1}

-- ОШИБКА: две точки вместо трех для varargs в таблице
local t = {..}
